--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li class="active"><a class="nav-item nav-link" href="/">博客</a></li>
                         <li></li>
                         <li></li>
-                        <li class=""><a class="nav-item nav-link" href="/about/">付费</a></li>
+                        <li class=""><a class="nav-item nav-link" href="/reward/pay-blog/">付费</a></li>
                     
                 </ul>
             </div>
