--- a/reward/pay-blog/index.html
+++ b/reward/pay-blog/index.html
@@ -70,9 +70,10 @@
         <p>喜欢我的文章的人，可以自愿付费购买。你可以使用一下方式付款。</p>
 
 <ol>
-<li>支付宝:
+<li>支付宝：
 <img src="/images/alipay.jpg" alt="alipay" /></li>
-<li>微信：由于微信付款经常出问题，暂时停止使用。</li>
+<li>微信：
+<img src="/images/wechatpay.jpg" alt="wechatpay" /></li>
 <li>PayPal：请点击[<a href="http://">付款链接</a>]</li>
 </ol>
 
