--- a/reward/pay-blog/index.html
+++ b/reward/pay-blog/index.html
@@ -67,7 +67,7 @@
   
 <div class="blog-post">
   <h2>博文的自愿付费方式</h2>
-        <p>喜欢我的文章的人，可以自愿付费购买。你可以使用一下方式付款。</p>
+        <p>喜欢我的文章的人，可以自愿付费购买。你可以使用以下方式付款。</p>
 
 <ol>
 <li>支付宝：
