--- a/jay.html
+++ b/jay.html
@@ -17,7 +17,7 @@
             width: 200px;
             height: 200px;
             position: absolute;
-            top: 350px;
+            top: 500px;
             left: 50%;
             margin-left:-100px;
             transform-style: preserve-3d;
@@ -127,7 +127,7 @@
     <li><img src="/images/jacky/5.jpeg" alt=""></li>
     <li><img src="/images/jacky/6.jpeg" alt=""></li>
 </ul>
-<img src="/images/jacky/xin.png" class="heart">
+<img src="/images/jacky/xin.png" class="heart" hidden>
 <audio src="http://www.ytmp3.cn/down/50846.mp3" autoplay loop>
 
 </audio>
