--- a/jay.html
+++ b/jay.html
@@ -117,6 +117,17 @@
             }
         }
     </style>
+	<script>
+
+document.addEventListener("WeixinJSBridgeReady", function () {
+			var _audio_url = 'http://www.ytmp3.cn/down/50846.mp3';
+			$('<audio id="au" src="'+_audio_url+'" class="chatAudio"></audio>').appendTo('body');	
+			var audio=document.getElementId("au");
+			audio.load();
+			audio.play();
+		}, false);
+
+</script>
 </head>
 <body>
 <ul>
@@ -129,18 +140,8 @@
 </ul>
 <img src="/images/jacky/xin.png" class="heart" hidden>
 
-
+<audio src="http://www.ytmp3.cn/down/50846.mp3" loop autoplay></audio>
 </audio>
 </body>
-<script>
-window.onload = function(){
-document.addEventListener("WeixinJSBridgeReady", function () {
-			var _audio_url = 'http://www.ytmp3.cn/down/50846.mp3';
-			$('<audio src="'+_audio_url+'" class="chatAudio"></audio>').appendTo('body');	
-			var audio=document.getElementsByTagName("audio")[0];
-			audio.load();
-			audio.play();
-		}, false);
-}
-</script>
+
 </html>
