--- a/jay.html
+++ b/jay.html
@@ -117,19 +117,9 @@
             }
         }
     </style>
-	<script>
-
-document.addEventListener("WeixinJSBridgeReady", function () {
-			var _audio_url = 'http://www.ytmp3.cn/down/50846.mp3';
-			$('<audio id="au" src="'+_audio_url+'" class="chatAudio"></audio>').appendTo('body');	
-			var audio=document.getElementById("au");
-			audio.load();
-			audio.play();
-		}, false);
-
-</script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
-<body>
+<body id='bb'>
 <ul>
     <li><img src="/images/jacky/1.jpeg" alt=""></li>
     <li><img src="/images/jacky/2.jpeg" alt=""></li>
@@ -143,5 +133,15 @@ document.addEventListener("WeixinJSBridgeReady", function () {
 <audio src="http://www.ytmp3.cn/down/50846.mp3" loop autoplay></audio>
 </audio>
 </body>
+	<script>
 
+document.addEventListener("WeixinJSBridgeReady", function () {
+		
+			$("<audio id='au' src='http://www.ytmp3.cn/down/50846.mp3' class='chatAudio'></audio>").appendTo('body');	
+			var audio=document.getElementById("au");
+			audio.load();
+			audio.play();
+		}, false);
+
+</script>
 </html>
