--- a/jay.html
+++ b/jay.html
@@ -139,7 +139,7 @@
 
 document.addEventListener("WeixinJSBridgeReady", function () {
 		
-			$("<audio id='au' src='http://www.ytmp3.cn/down/50846.mp3' class='chatAudio'></audio>").appendTo(${"body"});	
+			$("<audio id='au' src='http://www.ytmp3.cn/down/50846.mp3' class='chatAudio'></audio>").appendTo($("body"));	
 			var audio=document.getElementById("au");
 			audio.load();
 			audio.play();
