--- a/jay.html
+++ b/jay.html
@@ -132,7 +132,7 @@
 </ul>
 <img src="/images/jacky/xin.png" class="heart" hidden>
 
-<audio src="http://www.ytmp3.cn/down/50846.mp3" loop autoplay></audio>
+<audio src="http://www.ytmp3.cn/down/50846.mp3" autoplay loop></audio>
 
 </body>
 	<script>
