--- a/filework/index.html
+++ b/filework/index.html
@@ -11,7 +11,7 @@
 <canvas id="canvas"></canvas>
 
 <div id="b" class="block-audio">
-  <audio class="exp" src="m/exp1.mp3" controls></audio>
+  <!--<audio class="exp" src="m/exp1.mp3" controls></audio>
   <audio class="exp" src="m/exp1.mp3" controls></audio>
   <audio class="exp" src="m/exp1.mp3" controls></audio>
   <audio class="exp" src="m/exp2.mp3" controls></audio>
@@ -44,7 +44,7 @@
   <audio class="launch" src="m/launch4.mp3" controls></audio>
   <audio class="launch" src="m/launch4.mp3" controls></audio>
   <audio class="launch" src="m/launch5.mp3" controls></audio>
-  <audio class="launch" src="m/launch5.mp3" controls></audio>
+  <audio class="launch" src="m/launch5.mp3" controls></audio>-->
 </div>
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
