--- a/yuanxiaojie/index.html
+++ b/yuanxiaojie/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>firework</title>
+<title>װ×ֿü½Ú¿לְײ^_^</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 
