--- a/yuanxiaojie/index.html
+++ b/yuanxiaojie/index.html
@@ -4,6 +4,15 @@
  <meta charset="UTF-8">
 <title>元宵节快乐</title>
 <link rel="stylesheet" href="css/style.css">
+<style>
+#copy{
+	position: absolute;
+	bottom: 0px;
+	text-align:center;
+	text-color:white;
+}
+
+</style>
 </head>
 
 <body>
@@ -49,7 +58,7 @@
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
-
+<div id="copy">Copyright &copy;2019 wangerk.com All Rights Reserved</div>
 </body>
 <script>
 
