--- a/yuanxiaojie/index.html
+++ b/yuanxiaojie/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
  <meta charset="UTF-8">
-<title>元宵节快乐</title>
+<title>元宵节快乐^_^</title>
 <link rel="stylesheet" href="css/style.css">
 <style>
 #copy{
