--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/stylesheet.css">
     <link rel="stylesheet" href="/css/home.css">
-
+    <link rel="shortcut icon" href="/images/w.jpg">
     
     
 </head>
