--- a/yuanxiaojie/index.html
+++ b/yuanxiaojie/index.html
@@ -61,6 +61,7 @@
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/line.js"></script>
 <div id="copy">Copyright &copy;2019 wangerk.com All Rights Reserved</div>
 </body>
 <script>
@@ -71,7 +72,9 @@ document.addEventListener("WeixinJSBridgeReady", function () {
 			audio.load();
 			audio.play();
   $('<audio class="exp" src="m/exp1.mp3" controls></audio><audio class="exp" src="m/exp1.mp3" controls></audio><audio class="exp" src="m/exp1.mp3" controls></audio><audio class="exp" src="m/exp2.mp3" controls></audio><audio class="exp" src="m/exp2.mp3" controls></audio><audio class="exp" src="m/exp2.mp3" controls></audio><audio class="exp" src="m/exp3.mp3" controls></audio><audio class="exp" src="m/exp3.mp3" controls></audio> <audio class="exp" src="m/exp3.mp3" controls></audio><audio class="exp" src="m/exp4.mp3" controls></audio><audio class="exp" src="m/exp4.mp3" controls></audio> <audio class="exp" src="m/exp4.mp3" controls></audio><audio class="exp" src="m/exp5.mp3" controls></audio><audio class="exp" src="m/exp5.mp3" controls></audio><audio class="exp" src="m/exp5.mp3" controls></audio><audio class="exp" src="m/exp6.mp3" controls></audio> <audio class="exp" src="m/exp6.mp3" controls></audio><audio class="exp" src="m/exp6.mp3" controls></audio> <audio class="exp" src="m/exp7.mp3" controls></audio><audio class="exp" src="m/exp7.mp3" controls></audio> <audio class="exp" src="m/exp7.mp3" controls></audio><audio class="exp" src="m/exp8.mp3" controls></audio><audio class="exp" src="m/exp8.mp3" controls></audio><audio class="exp" src="m/exp8.mp3" controls></audio><audio class="launch" src="m/launch1.mp3" controls></audio><audio class="launch" src="m/launch1.mp3" controls></audio><audio class="launch" src="m/launch2.mp3" controls></audio><audio class="launch" src="m/launch2.mp3" controls></audio><audio class="launch" src="m/launch3.mp3" controls></audio><audio class="launch" src="m/launch3.mp3" controls></audio><audio class="launch" src="m/launch4.mp3" controls></audio><audio class="launch" src="m/launch4.mp3" controls></audio> <audio class="launch" src="m/launch5.mp3" controls></audio><audio class="launch" src="m/launch5.mp3" controls></audio>').appendTo($("#b"));
+  showLine();
   start();
+ 
   
   
   }, false);	
