--- a/blog-cn/java/to-be-top-javaer/index.html
+++ b/blog-cn/java/to-be-top-javaer/index.html
@@ -69,7 +69,7 @@
   <h2>JAVA技术栈</h2>
         
 
-<h3 id="目录">目录：</h3>
+<h3 id="目录-这是图片-images-code-jpg">目录：<img src="../images/code.jpg" alt="这是图片" /></h3>
 
 <p><a href="/basics/jvm/jvm-memory-structure/">《基础篇》JVM——JVM内存结构</a></p>
 
